test/error/StNativeUnterminated.ci
public static class Test
{
	public static bool Run()
	{
		native { //ERROR: Native block not terminated